<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.symplyfyweb.gherghina.pokypoker.PlayActivity"
    android:id="@+id/rootLayout"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_Bet"
        android:id="@+id/txt_Bet"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#010101" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_vertical"
        android:id="@+id/linLay_cards">
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/txt_Button_Raise_Down"
            android:id="@+id/btn_Raise_Down"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:background="@drawable/raisedown" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:id="@+id/iv_card1"
            android:layout_weight="1.2"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:id="@+id/iv_card2"
            android:layout_weight="1.2"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:id="@+id/iv_card3"
            android:layout_weight="1.2"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:id="@+id/iv_card4"
            android:layout_weight="1.2"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:id="@+id/iv_card5"
            android:layout_weight="1.2"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/txt_Button_Raise_Up"
            android:id="@+id/btn_Raise_Up"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:background="@drawable/raiseup" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linLay_cards"
        android:layout_marginTop="7dp"
        android:id="@+id/linLay_Hold">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txt_txtView_fill_1"
            android:id="@+id/txtView_fill_1"
            android:layout_weight="1" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:background="@drawable/button_states_green"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txt_btn_card1_Hold"
            android:id="@+id/btn_Hold_1"
            android:layout_weight="1.2"
            android:textColor="#ffffff" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:background="@drawable/button_states_green"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txt_btn_card2_Hold"
            android:id="@+id/btn_Hold_2"
            android:layout_weight="1.2"
            android:textColor="#ffffff" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:background="@drawable/button_states_green"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txt_btn_card3_Hold"
            android:id="@+id/btn_Hold_3"
            android:layout_weight="1.2"
            android:textColor="#ffffff" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:background="@drawable/button_states_green"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txt_btn_card4_Hold"
            android:id="@+id/btn_Hold_4"
            android:layout_weight="1.2"
            android:textColor="#ffffff" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:background="@drawable/button_states_green"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txt_btn_card5_Hold"
            android:id="@+id/btn_Hold_5"
            android:layout_weight="1.2"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txt_txtView_fill_2"
            android:id="@+id/txtView_fill_2"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/txt_Button_PlayOrGetMoney"
        android:background="@android:color/transparent"
        android:id="@+id/btn_Play_GetMoney"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btn_Double"
        android:layout_toEndOf="@+id/btn_Double" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_txtView_Info"
        android:id="@+id/txtView_Info"
        android:layout_below="@+id/linLay_cards"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="#010101" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/txt_btn_Double"
        android:background="@android:color/transparent"
        android:id="@+id/btn_Double"
        android:textColor="#ffffff"
        android:layout_alignBottom="@+id/btn_Play_GetMoney"
        android:layout_toRightOf="@+id/txtView_Info"
        android:layout_toEndOf="@+id/txtView_Info" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/linearLayout2">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageView_Credit"
            android:contentDescription="@string/app_name"
            android:background="@drawable/money_credit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:text="@string/txt_txtView_Credit"
            android:id="@+id/txtView_Credit"
            android:textColor="#010101" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_Bet"
        android:layout_marginTop="45dp"
        android:id="@+id/linLay_Hold_Text">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="HELD"
            android:textSize="28sp"
            android:gravity="center"
            android:id="@+id/txtView_Hold1"
            android:layout_weight="1.2"
            android:textColor="#c91f19" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="HELD"
            android:textSize="28sp"
            android:gravity="center"
            android:id="@+id/txtView_Hold2"
            android:layout_weight="1.2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="HELD"
            android:textSize="28sp"
            android:gravity="center"
            android:id="@+id/txtView_Hold3"
            android:layout_weight="1.2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="HELD"
            android:textSize="28sp"
            android:gravity="center"
            android:id="@+id/txtView_Hold4"
            android:layout_weight="1.2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="HELD"
            android:textSize="28sp"
            android:gravity="center"
            android:id="@+id/txtView_Hold5"
            android:layout_weight="1.2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>
