<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/relLay_main"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/btn_Play_Text"
            android:id="@+id/btn_Play"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:background="@drawable/button_states"
            android:shadowColor="#293D3C"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="3" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/btn_Card_Deck_Text"
            android:id="@+id/btn_Card_Deck"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="@drawable/button_states"
            android:shadowColor="#293D3C"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="3" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txt_btn_Statistics"
            android:id="@+id/btn_Statistics"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="@drawable/button_states"
            android:shadowColor="#293D3C"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="3" />

    </LinearLayout>

</RelativeLayout>
